# NIFREC

./: .gitignore  CITATION.cff  READ.md  README.md  Readme.md  environment.yml  pyproject.toml
data/: sample.csv
src/nifrec/: 1_1_nifrec_rdkit.py  1_2_nifrec_xtb.py  1_3_nifrec_collect_eminconfs.py  2_1_nifrec_gaussian_optfreq.py  2_2_nifrec_gaussian_parse.py  nifrec_gaussian_optfreq.py  nifrec_gaussian_parse.py  nifrec_rdkit.py  nifrec_xtb.py  utility_opt.py
