# This project uses PEP 621 metadata and setuptools with a src/ layout.
# Install directly from GitHub, e.g.:
#   pip install "nifrec @ git+https://github.com/tanaka-hideya/NIFREC.git@main"
# Or with optional extras (e.g., RDKit):
#   pip install "nifrec[chem] @ git+https://github.com/tanaka-hideya/NIFREC.git@main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nifrec"
version = "1.0.0"
description = "NIFREC: an automated geometry optimization workflow for molecular ground states that incorporates an automated protocol for the elimination of imaginary frequencies (RDKit, xTB, Gaussian, and parsing)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Hideya Tanaka" },
  { name = "Tomoyuki Miyao" }
]
keywords = [
  "automation",
  "descriptor",
  "quantum chemistry",
  "chemoinformatics",
  "DFT calculation",
  "imaginary frequency"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry"
]
# Dependencies are derived from environment.yml. Some packages (e.g., RDKit, xTB)
# are typically installed via conda; see optional-dependencies and notes below.
dependencies = [
  "numpy",
  "pandas",
  "cclib==1.8.1",
  "joblib",
  "periodictable",
  "morfeus-ml==0.7.2"
]

[project.optional-dependencies]
# RDKit wheels are available on PyPI for some platforms but may lag releases.
# Prefer conda-forge for RDKit if you encounter platform issues.
chem = [
  "rdkit>=2024.9.3"
]
# xTB is a compiled codebase typically provided via conda (conda-forge::xtb)
# or system package managers. It is intentionally not specified as a PyPI
# dependency here.

[project.scripts]
nifrec-rdkit = "nifrec.nifrec_rdkit:main"
nifrec-xtb = "nifrec.nifrec_xtb:main"
nifrec-gaussian-optfreq = "nifrec.nifrec_gaussian_optfreq:main"
nifrec-gaussian-parse = "nifrec.nifrec_gaussian_parse:main"

[project.urls]
Homepage = "https://github.com/tanaka-hideya/NIFREC"
Repository = "https://github.com/tanaka-hideya/NIFREC.git"
Issues = "https://github.com/tanaka-hideya/NIFREC/issues"

[tool.setuptools]
# Use src/ layout
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nifrec*"]
